--- a/packages/set-seleccion-consumer-fn/func.yaml
+++ b/packages/set-seleccion-consumer-fn/func.yaml
@@ -1,5 +1,5 @@
 schema_version: 20180708
-name: set-seleccion-fn
+name: set-seleccion-consumer-fn
 version: 0.0.1
 runtime: python
 build_image: fnproject/python:3.11-dev
