--- a/packages/website/Dockerfile
+++ b/packages/website/Dockerfile
@@ -1,26 +1,17 @@
-# Usa la imagen oficial de nginx basada en Alpine para un tamaño más pequeño
+# Usar nginx como imagen base
 FROM nginx:alpine
 
-# Elimina la configuración por defecto de nginx
+# Eliminar el archivo de configuración predeterminado de nginx
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copia la configuración personalizada de nginx
+# Copiar el archivo de configuración personalizado de nginx
 COPY nginx.conf /etc/nginx/conf.d/
 
-# Copia los archivos de la aplicación al directorio de nginx
+# Copiar los archivos del sitio web al directorio predeterminado de nginx
 COPY . /usr/share/nginx/html/
 
-# COPY index.html /usr/share/nginx/html/
-# COPY reporte.html /usr/share/nginx/html/
-# COPY index.js /usr/share/nginx/html/
-# COPY reporte.js /usr/share/nginx/html/
-# COPY styles.css /usr/share/nginx/html/
-
-# Si tienes un ícono de comida, descomenta esta línea:
-# COPY food-icon.png /usr/share/nginx/html/
-
-# Expone el puerto 80
+# Exponer el puerto 80
 EXPOSE 80
 
-# Comando para iniciar nginx
+# Comando para ejecutar nginx en primer plano
 CMD ["nginx", "-g", "daemon off;"]
